--- a/clientApp/src/app/gallery/gallery.component.scss
+++ b/clientApp/src/app/gallery/gallery.component.scss
@@ -310,7 +310,6 @@ $secondary-color: #fec5bb;
         .video-section {
           display: grid;
           grid-template-columns: 1fr;
-          max-height: 40rem;
 
           .iframe-container {
             padding-top: 30px;
@@ -371,7 +370,6 @@ $secondary-color: #fec5bb;
         .video-section {
           display: grid;
           grid-template-columns: 1fr;
-          max-height: 40rem;
 
           .iframe-container {
             padding-top: 30px;
@@ -433,7 +431,6 @@ $secondary-color: #fec5bb;
         .video-section {
           display: grid;
           grid-template-columns: 1fr;
-          max-height: 30rem;
 
           .iframe-container {
             padding-top: 30px;
@@ -491,6 +488,13 @@ $secondary-color: #fec5bb;
         .description-divide {
           grid-template-columns: 1fr;
 
+          .video-overlay {
+            padding: 0.5rem;
+            width: 100%;
+            height: 100%;
+          }
+          
+
           .img-overlay {
             padding: 1rem;
 
@@ -511,8 +515,8 @@ $secondary-color: #fec5bb;
       // Project section for single photos without description
       .project-section-single-photo-without-description {
         .video-overlay {
-          width: 95%;
-          height: 95%;
+          width: 100%;
+          height: 100%;
         }
 
         .img-overlay {
@@ -600,6 +604,12 @@ $secondary-color: #fec5bb;
         .description-divide {
           grid-template-columns: 1fr;
 
+          .video-overlay {
+            padding: 0.5rem;
+            width: 100%;
+            height: 100%;
+          }
+
 
           .img-overlay {
             padding: 1rem;
@@ -622,7 +632,7 @@ $secondary-color: #fec5bb;
       .project-section-single-photo-without-description {
         .video-overlay {
           width: 100%;
-          height: 95%;
+          height: 100%;
         }
 
         .img-overlay {
