--- a/clientApp/src/app/gallery/gallery.component.scss
+++ b/clientApp/src/app/gallery/gallery.component.scss
@@ -607,7 +607,7 @@ $secondary-color: #fec5bb;
           .video-overlay {
             padding: 0.5rem;
             width: 100%;
-            height: 100%;
+            min-height: 50rem;
           }
 
 
@@ -632,7 +632,9 @@ $secondary-color: #fec5bb;
       .project-section-single-photo-without-description {
         .video-overlay {
           width: 100%;
-          height: 100%;
+          // height: 100%;
+          min-height: 50rem;
+
         }
 
         .img-overlay {
