--- a/clientApp/src/app/gallery/gallery.component.html
+++ b/clientApp/src/app/gallery/gallery.component.html
@@ -45,7 +45,7 @@
                       <iframe
                         [src]="imageItem.videoUrl | safeUrl: 'resourceUrl'"
                         frameborder="0"
-                        allowfullscreen
+                        allowfullscreen="true"
                       ></iframe>
                     </div>
                     <small
@@ -92,7 +92,7 @@
                       pSection.mediaContent[0].videoUrl | safeUrl: 'resourceUrl'
                     "
                     frameborder="0"
-                    allowfullscreen
+                    allowfullscreen="true"
                   ></iframe>
                 </div>
   
@@ -159,7 +159,7 @@
                     pSection.mediaContent[0].videoUrl | safeUrl: 'resourceUrl'
                   "
                   frameborder="0"
-                  allowfullscreen
+                  allowfullscreen="true"
                 ></iframe>
               </div>
 
@@ -234,7 +234,7 @@
                       <iframe
                         [src]="imageItem.videoUrl | safeUrl: 'resourceUrl'"
                         frameborder="0"
-                        allowfullscreen
+                        allowfullscreen="true"
                       ></iframe>
                     </div>
                     <small
@@ -290,7 +290,7 @@
                       <iframe
                         [src]="imageItem.videoUrl | safeUrl: 'resourceUrl'"
                         frameborder="0"
-                        allowfullscreen
+                        allowfullscreen="true"
                       ></iframe>
                     </div>
                     <small
