--- a/clientApp/src/app/gallery/gallery.component.scss
+++ b/clientApp/src/app/gallery/gallery.component.scss
@@ -223,7 +223,7 @@ $secondary-color: #fec5bb;
     .project-section-single-photo-without-description {
       .video-overlay {
         padding: 0.5rem;
-        width: 70%;
+        width: 80%;
         height: 40rem;
         box-sizing: border-box;
         display: grid;
@@ -607,7 +607,7 @@ $secondary-color: #fec5bb;
           .video-overlay {
             padding: 0.5rem;
             width: 100%;
-            min-height: 50rem;
+            height: 100%;
           }
 
 
@@ -632,8 +632,7 @@ $secondary-color: #fec5bb;
       .project-section-single-photo-without-description {
         .video-overlay {
           width: 100%;
-          // height: 100%;
-          min-height: 50rem;
+          height: 100%;
 
         }
 
