remove top padding for iframe

--- a/clientApp/src/app/gallery/gallery.component.scss
+++ b/clientApp/src/app/gallery/gallery.component.scss
@@ -164,7 +164,7 @@ $secondary-color: #fec5bb;
           grid-template-columns: 1fr;
 
           .iframe-container {
-            padding-top: 30px;
+            // padding-top: 30px;
             position: relative;
             overflow: hidden;
             padding-bottom: 56.25%;
@@ -230,7 +230,7 @@ $secondary-color: #fec5bb;
         grid-template-columns: 1fr;
 
         .iframe-container {
-          padding-top: 30px;
+          // padding-top: 30px;
           position: relative;
           overflow: hidden;
           padding-bottom: 56.25%;
