blog management bug solved. header put in center

--- a/clientApp/src/app/blogs/blogs.component.scss
+++ b/clientApp/src/app/blogs/blogs.component.scss
@@ -110,6 +110,7 @@ main {
     h2 {
       font-size: 4rem;
       text-transform: uppercase;
+      text-align: center;
     }
 
     .blog-sections {
