--- a/clientApp/src/app/art-education/art-education.component.scss
+++ b/clientApp/src/app/art-education/art-education.component.scss
@@ -70,8 +70,8 @@ $secondary-color: #fec5bb;
       img {
         padding-top: 1rem;
         background: transparent;
-        width: 90%;
-        height: 90%;
+        width: 95%;
+        max-height: 80%;
         object-fit: contain;
         z-index: 12;
       }
