--- a/clientApp/src/app/blogs/blogs.component.html
+++ b/clientApp/src/app/blogs/blogs.component.html
@@ -2,12 +2,12 @@
   <div class="blog-container">
 
       <!-- Image Modal to view enlarged Image. -->
-  <div class="opened-img" #imgModal>
-    <div class="btn-div">
+  <div class="opened-img" #imgModal (click)="closeModalImage()">
+    <!-- <div class="btn-div" >
       <button (click)="closeModalImage()">
         <i class="fa-solid fa-xmark"></i>
       </button>
-    </div>
+    </div> -->
 
     <div class="img-container">
       <img src="{{ curImgLink }}"  alt="" />
