--- a/clientApp/src/app/gallery/gallery.component.scss
+++ b/clientApp/src/app/gallery/gallery.component.scss
@@ -26,6 +26,7 @@ $secondary-color: #fec5bb;
 
     .btn-div {
       position: relative;
+      z-index: 15;
 
       button {
         position: fixed;
@@ -70,8 +71,8 @@ $secondary-color: #fec5bb;
       img {
         padding-top: 1rem;
         background: transparent;
-        width: 90%;
-        height: 95%;
+        width: 95%;
+        max-height: 80%;
         object-fit: contain;
         z-index: 12;
       }
