--- a/clientApp/src/app/main-app/main-app.component.html
+++ b/clientApp/src/app/main-app/main-app.component.html
@@ -243,7 +243,7 @@
         </ng-template>
         <ng-template #nonBlogProjectBlock>
           <a [routerLink]="['/T/project-rants', '-1']"
-            >Project's/Journal</a
+            >Projects/Journal</a
           >
         </ng-template>
         </li>
