--- a/clientApp/src/app/blogs/blogs.component.scss
+++ b/clientApp/src/app/blogs/blogs.component.scss
@@ -62,12 +62,12 @@ main {
         height: 100%;
         background: transparent;
         position: relative;
-        padding: 1rem;
+        // padding: 1rem;
         box-sizing: border-box;
 
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
 
         & > * {
@@ -75,7 +75,7 @@ main {
         }
 
         img {
-          padding-top: 1rem;
+          padding-top: 2rem;
           background: transparent;
           width: 95%;
           max-height: 80%;
