hoping this is final change

--- a/clientApp/src/app/main-app/main-app.component.html
+++ b/clientApp/src/app/main-app/main-app.component.html
@@ -101,7 +101,7 @@
         </ng-template>
         <ng-template #phoneNonBlogProjectBlock>
           <a [routerLink]="['/T/project-rants', '-1']"
-            >Project's/Journal</a
+            >Projects/Journal</a
           >
         </ng-template>
         </li>
