--- a/clientApp/src/app/gallery/gallery.component.scss
+++ b/clientApp/src/app/gallery/gallery.component.scss
@@ -615,6 +615,10 @@ $secondary-color: #fec5bb;
           .img-overlay {
             padding: 1rem;
 
+            img{
+              height: 100%;
+            }
+
             .img-description-short {
               small {
                 font-size: 1rem;
@@ -640,6 +644,10 @@ $secondary-color: #fec5bb;
         .img-overlay {
           width: 95%;
           height: 95%;
+
+          img{
+            height: 100%;
+          }
         }
       }
 
