--- a/clientApp/src/app/blogs/blogs.component.scss
+++ b/clientApp/src/app/blogs/blogs.component.scss
@@ -122,7 +122,7 @@ main {
       .text-section {
         margin-top: 2rem;
         margin-bottom: 1rem;
-        font-size: 2rem;
+        font-size: 1.5rem;
         text-align: justify;
       }
 
@@ -194,8 +194,8 @@ main {
 
           img {
             object-fit: contain;
-            width: 100%;
-            height: 100%;
+            width: 85%;
+            height: 85%;
           }
 
           small {
@@ -239,6 +239,12 @@ main {
           .image-group {
             display: grid;
             grid-template-columns: 1fr;
+
+            img {
+              // object-fit: contain;
+              width: 100%;
+              height: 100%;
+            }
           }
         }
       }
