--- a/clientApp/src/app/blogs/blogs.component.scss
+++ b/clientApp/src/app/blogs/blogs.component.scss
@@ -190,19 +190,34 @@ main {
           display: grid;
           grid-template-columns: 1fr 1fr;
           
-          gap: 5px;
+          gap: 1px;
 
-          img {
-            object-fit: contain;
-            width: 85%;
-            height: 85%;
+          .image-item{
+
+            max-width: 80%;
+            img {
+              object-fit: contain;
+              width: 100%;
+              height: 100%;
+              text-align: end;
+            }
+  
+            small {
+              text-align: center;
+              display: block;
+              font-size: 1rem;
+            }
           }
 
-          small {
-            text-align: center;
-            display: block;
-            font-size: 1rem;
+
+          .image-item:nth-child(even){
+            justify-self: start;
           }
+
+          .image-item:nth-child(odd){
+            justify-self: end;
+          }
+
         }
       }
     }
@@ -240,11 +255,22 @@ main {
             display: grid;
             grid-template-columns: 1fr;
 
-            img {
-              // object-fit: contain;
-              width: 100%;
-              height: 100%;
+            .image-item{
+              img {
+                // object-fit: contain;
+                width: 100%;
+                height: 100%;
+              }
             }
+
+            .image-item:nth-child(even){
+              justify-self: center;
+            }
+  
+            .image-item:nth-child(odd){
+              justify-self: center;
+            }
+
           }
         }
       }
