--- a/clientApp/src/app/art-education/art-education.component.scss
+++ b/clientApp/src/app/art-education/art-education.component.scss
@@ -4,6 +4,21 @@ $primary-color: #f8efe6;
 $primary-dark: #333;
 $secondary-color: #fec5bb;
 
+
+.gif-container{
+  display: flex;
+  height: 90vh;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+
+  img{
+    object-fit: contain;
+    width: 95%;
+    height: 95%;
+  }
+}
+
 .container {
   color: $primary-dark;
   height: 100vh;
