--- a/clientApp/src/app/blogs/blogs.component.scss
+++ b/clientApp/src/app/blogs/blogs.component.scss
@@ -11,8 +11,26 @@ main {
   width: 100%;
   height: 100%;
 
+
+  // for gif loading for blogs
+  .gif-container{
+    display: flex;
+    height: 90vh;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  
+    img{
+      object-fit: contain;
+      width: 95%;
+      height: 95%;
+    }
+  }
+
+
+
   img {
-    cursor: pointer;
+    cursor: pointer;  
   }
 
   .blog-container {
