Phone screen side bar not loading bug

--- a/clientApp/src/app/main-app/main-app.component.html
+++ b/clientApp/src/app/main-app/main-app.component.html
@@ -7,7 +7,7 @@
     </button>
   </div>
 
-  <div class="phone-side-bar" #phone_side_menu>
+  <div class="phone-side-bar phone-side-menu-active" #phone_side_menu>
     <div class="side-bar-menu">
       <ul>
         <li>
