--- a/clientApp/src/app/art-education/art-education.component.scss
+++ b/clientApp/src/app/art-education/art-education.component.scss
@@ -257,6 +257,10 @@ $secondary-color: #fec5bb;
     }
 
     .art-container {
+
+      p{
+        font-size: 1.1rem;
+      }
       // Project section for multiple images
       .project-section-multiple-photos-layed {
         .section-contents {
