--- a/clientApp/src/app/blogs/blogs.component.scss
+++ b/clientApp/src/app/blogs/blogs.component.scss
@@ -267,6 +267,9 @@ main {
 
     .blog-container {
       .blog-sections {
+        .text-section {
+          font-size: 1.1rem;
+        }
         .media-group-section {
           width: 100%;
           .image-group {
