New Navigation Page, Back button overide, ImgBtn open

--- a/clientApp/src/app/art-education/art-education.component.html
+++ b/clientApp/src/app/art-education/art-education.component.html
@@ -82,7 +82,7 @@
 
 <ng-template #backgroundImage>
   <div class="gif-container">
-    <img src="assets/Images/loading.gif" alt="">
+    <h3>Incorrect URL</h3>
   </div>
 </ng-template>
 
