--- a/clientApp/src/app/main-app/main-app.component.html
+++ b/clientApp/src/app/main-app/main-app.component.html
@@ -1,116 +1,8 @@
 <div class="container">
   <div class="phone-menu">
-    <button (click)="TogglePhoneMenu()" class="phone-menu-btn">
-      <div *ngIf="hamburger; then barsBlock; else crossBlock"></div>
-      <ng-template #crossBlock><i class="fa-solid fa-bars"></i></ng-template>
-      <ng-template #barsBlock><i class="fa-solid fa-xmark"></i></ng-template>
+    <button (click)="goToNavigation()" class="phone-menu-btn">
+      <i class="fa-solid fa-bars" ></i>
     </button>
-  </div>
-
-  <div class="phone-side-bar phone-side-menu-active" #phone_side_menu>
-    <div class="side-bar-menu">
-      <ul>
-        <li>
-          <a routerLink="/home">Home</a>
-        </li>
-
-        <li>
-          <a routerLink="about" (click)="switchChild(true)">About</a>
-        </li>
-
-        <!-- Phone Menu for gallery -->
-        <li>
-          <div
-            *ngIf="
-              galleryActive;
-              then phoneGalleryBlock;
-              else phoneNonGalleryBlock
-            "
-          ></div>
-          <ng-template #phoneGalleryBlock>
-            <h3>Gallery</h3>
-
-            <ul *ngFor="let proj of projectList">
-              <li>
-                <a
-                  (click)="switchProject(proj.id, true)"
-                  [routerLink]="['gallery', proj.id]"
-                  [ngClass]="{ active: proj.id == curProject }"
-                  >{{ proj.projectName }}</a
-                >
-              </li>
-            </ul>
-          </ng-template>
-          <ng-template #phoneNonGalleryBlock>
-            <a [routerLink]="['/T/gallery', '-1']">Gallery</a>
-          </ng-template>
-        </li>
-
-
-        <!-- Phone Menu for art education -->
-        <li>
-          <div
-          *ngIf="
-            artEducationActive;
-            then phoneArtProjectBlock;
-            else phonenonArtProjectBlock
-          "
-        ></div>
-        <ng-template #phoneArtProjectBlock>
-          <h3>Art Education</h3>
-
-          <ul *ngFor="let artProj of artProjectList">
-            <li>
-              <a
-                (click)="switchArtProject(artProj.id,true)"
-                [routerLink]="['/T/art-education', artProj.id]"
-                [ngClass]="{ active: artProj.id == curArtproject }"
-                >{{ artProj.projectName }}</a
-              >
-            </li>
-          </ul>
-        </ng-template>
-        <ng-template #phonenonArtProjectBlock>
-          <a [routerLink]="['/T/art-education', '-1']"
-            >Art Education</a
-          >
-        </ng-template>
-        </li>
-
-        <li>
-          <div
-          *ngIf="
-            isBlogActive;
-            then phoneBlogProjectBlock;
-            else phoneNonBlogProjectBlock;
-          "
-        ></div>
-        <ng-template #phoneBlogProjectBlock>
-          <h3>Projects/Journal</h3>
-
-          <ul *ngFor="let blog of blogs">
-            <li>
-              <a
-                (click)="switchBlogProject(blog.id,true)"
-                [routerLink]="['/T/project-rants', blog.id]"
-                [ngClass]="{ active: blog.id == curBlog}"
-                >{{ blog.blogName }}</a
-              >
-            </li>
-          </ul>
-        </ng-template>
-        <ng-template #phoneNonBlogProjectBlock>
-          <a [routerLink]="['/T/project-rants', '-1']"
-            >Projects/Journal</a
-          >
-        </ng-template>
-        </li>
-
-        <li>
-          <a routerLink="contact" (click)="switchChild(true)">Contact</a>
-        </li>
-      </ul>
-    </div>
   </div>
 
   <div class="divide-section">
@@ -153,7 +45,7 @@
           </ul>
         </ng-template>
         <ng-template #nonBlogMgmnProjectBlock>
-          <a [routerLink]="['/T/blog-mngm', '-1']"
+          <a [routerLink]="['/T/blog-mngm', -1]"
             >Blog Management</a
           >
         </ng-template>
@@ -183,7 +75,7 @@
             </ul>
           </ng-template>
           <ng-template #nonGalleryBlock>
-            <a [routerLink]="['/T/gallery', '-1']">Gallery</a>
+            <a routerLink="/menu/gallery">Gallery</a>
           </ng-template>
         </li>
 
@@ -211,7 +103,7 @@
             </ul>
           </ng-template>
           <ng-template #nonArtProjectBlock>
-            <a [routerLink]="['/T/art-education', '-1']"
+            <a routerLink="/menu/art-education"
               >Art Education</a
             >
           </ng-template>
@@ -242,7 +134,7 @@
           </ul>
         </ng-template>
         <ng-template #nonBlogProjectBlock>
-          <a [routerLink]="['/T/project-rants', '-1']"
+          <a routerLink="/menu/project-rants"
             >Projects/Journal</a
           >
         </ng-template>
