--- a/clientApp/src/app/blogs/blogs.component.html
+++ b/clientApp/src/app/blogs/blogs.component.html
@@ -76,7 +76,7 @@
 
   <ng-template #backgroundImage>
     <div class="gif-container">
-      <img src="assets/Images/loading.gif" alt="">
+      <h3>Incorrect URL</h3>
     </div>
   </ng-template>
 </main>
