--- a/clientApp/src/app/gallery/gallery.component.scss
+++ b/clientApp/src/app/gallery/gallery.component.scss
@@ -11,12 +11,6 @@ $secondary-color: #fec5bb;
   width: 100%;
   justify-content: center;
   align-items: center;
-
-  img{
-    object-fit: contain;
-    width: 95%;
-    height: 95%;
-  }
 }
 
 .container {
@@ -32,7 +26,8 @@ $secondary-color: #fec5bb;
     left: 0;
     top: 0;
     width: 100vw;
-    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
     height: 100vh;
     // background-color: rgba($color: #000000, $alpha: 0.8);
     backdrop-filter: blur(8px);
@@ -42,15 +37,21 @@ $secondary-color: #fec5bb;
 
     .btn-div {
       position: relative;
+      background: transparent;
+      
+      display: flex;
+      align-items: flex-end;
+      justify-content: end;
+    
       z-index: 15;
 
       button {
-        position: fixed;
-        right: 2rem;
-        top: 1rem;
         width: 2rem;
         height: 2rem;
+        margin-top: 2rem;
+        margin-right: 2rem;
         border: none;
+
         background: transparent;
         font-size: 2rem;
         color: $primary-color;
@@ -69,17 +70,15 @@ $secondary-color: #fec5bb;
 
     .img-container {
       width: 100%;
-      height: 100%;
+      height: 90%;
       background: transparent;
       position: relative;
       // padding: 1rem;
       box-sizing: border-box;
-
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-
       & > * {
         background: transparent;
       }
@@ -88,7 +87,7 @@ $secondary-color: #fec5bb;
         padding-top: 2rem;
         background: transparent;
         width: 95%;
-        max-height: 80%;
+        // max-height: 80%;
         object-fit: contain;
         z-index: 12;
       }
@@ -96,24 +95,28 @@ $secondary-color: #fec5bb;
       p {
         padding: 2rem;
         color: $primary-color;
+        margin-top: 2rem;
+        // margin-bottom: 2rem;
         z-index: 12;
+        overflow-y: scroll;
         background: transparent;
-      }
-
-      &::before {
-        content: "";
-        position: absolute;
-        left: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba($color: #000000, $alpha: 0.8);
       }
     }
 
     &.active {
       background: transparent;
       visibility: visible;
+    }
+
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba($color: #000000, $alpha: 0.8);
     }
   }
 
@@ -609,10 +612,18 @@ $secondary-color: #fec5bb;
   .container {
     // Special CSS for opening a full screen image
     .opened-img {
+      .btn-div{
+        button{
+          margin-top: 0.5rem;
+          margin-right: 0.5rem;
+          width: 1rem;
+          height: 1rem;
+        }
+      }
       .img-container {
+        overflow: hidden;
         p {
           padding: 1rem;
-          font-size: 1.2rem;
         }
       }
     }
