ImageModal Bug fix

--- a/clientApp/src/app/gallery/gallery.component.html
+++ b/clientApp/src/app/gallery/gallery.component.html
@@ -4,7 +4,7 @@
   <span id="moveTop"></span>
   <div class="container" *ngIf="curProject != '-1'">
     <!-- Image Modal to view enlarged Image. -->
-    <div class="opened-img" #imgModal (click)="closeModalImage()">
+    <div class="opened-img" #imgModal>
   
   
       <!-- Redundant button  -->
