--- a/clientApp/src/app/gallery/gallery.component.scss
+++ b/clientApp/src/app/gallery/gallery.component.scss
@@ -26,8 +26,7 @@ $secondary-color: #fec5bb;
     left: 0;
     top: 0;
     width: 100vw;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow: hidden;
     height: 100vh;
     // background-color: rgba($color: #000000, $alpha: 0.8);
     backdrop-filter: blur(8px);
@@ -37,21 +36,16 @@ $secondary-color: #fec5bb;
 
     .btn-div {
       position: relative;
-      background: transparent;
-      
-      display: flex;
-      align-items: flex-end;
-      justify-content: end;
-    
       z-index: 15;
+      background: transparent;
 
       button {
+        position: fixed;
+        right: 2rem;
+        top: 1rem;
         width: 2rem;
         height: 2rem;
-        margin-top: 2rem;
-        margin-right: 2rem;
         border: none;
-
         background: transparent;
         font-size: 2rem;
         color: $primary-color;
@@ -75,10 +69,12 @@ $secondary-color: #fec5bb;
       position: relative;
       // padding: 1rem;
       box-sizing: border-box;
+
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
+
       & > * {
         background: transparent;
       }
@@ -87,7 +83,7 @@ $secondary-color: #fec5bb;
         padding-top: 2rem;
         background: transparent;
         width: 95%;
-        // max-height: 80%;
+        max-height: 80%;
         object-fit: contain;
         z-index: 12;
       }
@@ -95,19 +91,17 @@ $secondary-color: #fec5bb;
       p {
         padding: 2rem;
         color: $primary-color;
-        margin-top: 2rem;
-        // margin-bottom: 2rem;
         z-index: 12;
-        overflow-y: scroll;
         background: transparent;
       }
+
+
     }
 
     &.active {
       background: transparent;
       visibility: visible;
     }
-
 
     &::before {
       content: "";
@@ -489,10 +483,25 @@ $secondary-color: #fec5bb;
   .container {
     // Special CSS for opening a full screen image
     .opened-img {
+
+      .btn-div{
+        position: relative;
+        display: flex;
+        justify-content: end;
+        button{
+          margin-top: 0.5rem;
+          position: relative;
+        }
+      }
+
       .img-container {
+        img{
+          max-height: 70%;
+        }
         p {
           padding: 1rem;
-          font-size: 1.2rem;
+          // font-size: 1.2rem;
+          overflow-y: scroll;
         }
       }
     }
@@ -612,18 +621,25 @@ $secondary-color: #fec5bb;
   .container {
     // Special CSS for opening a full screen image
     .opened-img {
+
       .btn-div{
+        position: relative;
+        display: flex;
+        justify-content: end;
         button{
           margin-top: 0.5rem;
-          margin-right: 0.5rem;
-          width: 1rem;
-          height: 1rem;
+          position: relative;
         }
       }
+
       .img-container {
-        overflow: hidden;
+        img{
+          max-height: 70%;
+        }
         p {
           padding: 1rem;
+          // font-size: 1.2rem;
+          overflow-y: scroll;
         }
       }
     }
