--- a/clientApp/src/app/blogs/blogs.component.html
+++ b/clientApp/src/app/blogs/blogs.component.html
@@ -2,14 +2,16 @@
   <div *ngIf="curBlog != '-1'; then correctProject; else backgroundImage"></div>
 
   <ng-template #correctProject>
+    <span id="moveTop"></span>
     <div class="blog-container">
       <!-- Image Modal to view enlarged Image. -->
-      <div class="opened-img" #imgModal (click)="closeModalImage()">
-        <!-- <div class="btn-div" >
-      <button (click)="closeModalImage()">
-        <i class="fa-solid fa-xmark"></i>
-      </button>
-    </div> -->
+      <div class="opened-img" #imgModal>
+      <!-- Redundant button  -->
+      <div class="btn-div">
+        <button (click)="closeModalImage()">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+      </div>
 
         <div class="img-container">
           <img src="{{ curImgLink }}" alt="" />
