Change one position from fixed to relative for all platforms in gallery

--- a/clientApp/src/app/gallery/gallery.component.scss
+++ b/clientApp/src/app/gallery/gallery.component.scss
@@ -38,9 +38,13 @@ $secondary-color: #fec5bb;
       position: relative;
       z-index: 15;
       background: transparent;
+      display: flex;
+      justify-content: end;
+      margin-right: 1rem;
+      margin-top: 1rem;
 
       button {
-        position: fixed;
+        // position: fixed;
         right: 2rem;
         top: 1rem;
         width: 2rem;
