--- a/clientApp/src/app/gallery/gallery.component.scss
+++ b/clientApp/src/app/gallery/gallery.component.scss
@@ -22,6 +22,7 @@ $secondary-color: #fec5bb;
 
   // Special CSS for opening a full screen image
   .opened-img {
+    transform: translate3d(0,0,0);
     position: fixed;
     left: 0;
     top: 0;
@@ -67,6 +68,7 @@ $secondary-color: #fec5bb;
     }
 
     .img-container {
+      z-index: 12;
       width: 100%;
       height: 90%;
       background: transparent;
