--- a/clientApp/src/app/gallery/gallery.component.scss
+++ b/clientApp/src/app/gallery/gallery.component.scss
@@ -35,42 +35,12 @@ $secondary-color: #fec5bb;
     // display: none;
     visibility: collapse;
 
-    .btn-div {
-      position: relative;
-      z-index: 15;
-      background: transparent;
-      display: flex;
-      justify-content: end;
-      margin-right: 1rem;
-      margin-top: 1rem;
 
-      button {
-        // position: fixed;
-        right: 2rem;
-        top: 1rem;
-        width: 2rem;
-        height: 2rem;
-        border: none;
-        background: transparent;
-        font-size: 2rem;
-        color: $primary-color;
-        z-index: 15;
-
-        i {
-          background: transparent;
-        }
-
-        &:hover {
-          opacity: 0.8;
-          cursor: pointer;
-        }
-      }
-    }
 
     .img-container {
       z-index: 12;
       width: 100%;
-      height: 90%;
+      height: 95%;
       background: transparent;
       position: relative;
       // padding: 1rem;
@@ -85,8 +55,38 @@ $secondary-color: #fec5bb;
         background: transparent;
       }
 
+
+      .btn-div {
+        width: 95%;
+        max-height: 10%;
+        background: transparent;
+        display: flex;
+        justify-content: end;
+        align-items: flex-end;
+
+  
+        button {
+          margin-right: 2rem;
+          margin-top: 2rem;
+          border: none;
+          background: transparent;
+          font-size: 2rem;
+          color: $primary-color;
+          z-index: 15;
+  
+          i {
+            background: transparent;
+          }
+  
+          &:hover {
+            opacity: 0.8;
+            cursor: pointer;
+          }
+        }
+      }
+
       img {
-        padding-top: 2rem;
+        padding-top: 0.5rem;
         background: transparent;
         width: 95%;
         max-height: 80%;
@@ -95,7 +95,7 @@ $secondary-color: #fec5bb;
       }
 
       p {
-        padding: 2rem;
+        margin-top: 1rem;
         color: $primary-color;
         z-index: 12;
         background: transparent;
@@ -490,17 +490,15 @@ $secondary-color: #fec5bb;
     // Special CSS for opening a full screen image
     .opened-img {
 
-      .btn-div{
-        position: relative;
-        display: flex;
-        justify-content: end;
-        button{
-          margin-top: 0.5rem;
-          position: relative;
-        }
-      }
-
       .img-container {
+
+        .btn-div{
+          button{
+            margin-top: 0.5rem;
+          }
+        }
+
+
         img{
           max-height: 70%;
         }
@@ -511,6 +509,8 @@ $secondary-color: #fec5bb;
         }
       }
     }
+
+    
     // This is the hamburger menu
     .phone-menu {
       display: block;
@@ -628,17 +628,17 @@ $secondary-color: #fec5bb;
     // Special CSS for opening a full screen image
     .opened-img {
 
-      .btn-div{
-        position: relative;
-        display: flex;
-        justify-content: end;
-        button{
-          margin-top: 0.5rem;
-          position: relative;
-        }
-      }
+
 
       .img-container {
+
+        .btn-div{
+          button{
+            margin-top: 0.5rem;
+          }
+        }
+
+
         img{
           max-height: 70%;
         }
