--- a/clientApp/src/app/art-education/art-education.component.scss
+++ b/clientApp/src/app/art-education/art-education.component.scss
@@ -20,6 +20,7 @@ $secondary-color: #fec5bb;
 
   // Special CSS for opening a full screen image
   .opened-img {
+    transform: translate3d(0,0,0);
     position: fixed;
     left: 0;
     top: 0;
@@ -32,37 +33,10 @@ $secondary-color: #fec5bb;
     // display: none;
     visibility: collapse;
 
-    .btn-div {
-      position: relative;
-      z-index: 15;
-      background: transparent;
-
-      button {
-        position: fixed;
-        right: 2rem;
-        top: 1rem;
-        width: 2rem;
-        height: 2rem;
-        border: none;
-        background: transparent;
-        font-size: 2rem;
-        color: $primary-color;
-        z-index: 15;
-
-        i {
-          background: transparent;
-        }
-
-        &:hover {
-          opacity: 0.8;
-          cursor: pointer;
-        }
-      }
-    }
 
     .img-container {
       width: 100%;
-      height: 100%;
+      height: 95%;
       background: transparent;
       position: relative;
       // padding: 1rem;
@@ -77,8 +51,37 @@ $secondary-color: #fec5bb;
         background: tran;
       }
 
+      .btn-div {
+        width: 95%;
+        max-height: 10%;
+        background: transparent;
+        display: flex;
+        justify-content: end;
+        align-items: flex-end;
+  
+        button {
+          margin-right: 2rem;
+          margin-top: 2rem;
+          border: none;
+          background: transparent;
+          font-size: 2rem;
+          color: $primary-color;
+          z-index: 15;
+  
+          i {
+            background: transparent;
+          }
+  
+          &:hover {
+            opacity: 0.8;
+            cursor: pointer;
+          }
+        }
+      }
+  
+
       img {
-        padding-top: 2rem;
+        padding-top: 0.5rem;
         background: transparent;
         width: 95%;
         max-height: 80%;
@@ -87,7 +90,7 @@ $secondary-color: #fec5bb;
       }
 
       p {
-        padding: 2rem;
+        margin-top: 1rem;
         color: $primary-color;
         z-index: 12;
         background: transparent;
@@ -214,20 +217,18 @@ $secondary-color: #fec5bb;
   .container {
     // Special CSS for opening a full screen image
     .opened-img {
-      .btn-div{
-        position: relative;
-        display: flex;
-        justify-content: end;
-        button{
-          margin-top: 0.5rem;
-          position: relative;
-        }
-      }
 
       .img-container {
+
+        .btn-div{
+          button{
+            margin-top: 0.5rem;
+          }
+        }
         img{
           max-height: 70%;
         }
+
 
         p {
           padding: 1rem;
@@ -236,7 +237,6 @@ $secondary-color: #fec5bb;
         }
       }
     }
-
     .art-container {
       // Project section for multiple images
       .project-section-multiple-photos-layed {
@@ -257,18 +257,14 @@ $secondary-color: #fec5bb;
   .container {
     // Special CSS for opening a full screen image
     .opened-img {
-      .btn-div{
-        position: relative;
-        display: flex;
-        justify-content: end;
-        button{
-          margin-top: 0.5rem;
-          position: relative;
-        }
-      }
-
 
       .img-container {
+
+        .btn-div{
+          button{
+            margin-top: 0.5rem;
+          }
+        }
         img{
           max-height: 70%;
         }
