--- a/clientApp/src/app/blogs/blogs.component.scss
+++ b/clientApp/src/app/blogs/blogs.component.scss
@@ -10,6 +10,7 @@ main {
   justify-content: center;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 
   // for gif loading for blogs
   .gif-container {
@@ -25,10 +26,13 @@ main {
   }
 
   .blog-container {
+    margin: 5px 5px;
+    height: 100vh;
     text-align: justify;
     position: relative;
     // Special CSS for opening a full screen image
     .opened-img {
+      transform: translate3d(0, 0, 0);
       position: fixed;
       left: 0;
       top: 0;
@@ -41,37 +45,9 @@ main {
       // display: none;
       visibility: collapse;
 
-      .btn-div {
-        position: relative;
-        z-index: 15;
-        background: transparent;
-
-        button {
-          position: fixed;
-          right: 2rem;
-          top: 1rem;
-          width: 2rem;
-          height: 2rem;
-          border: none;
-          background: transparent;
-          font-size: 2rem;
-          color: $primary-color;
-          z-index: 15;
-
-          i {
-            background: transparent;
-          }
-
-          &:hover {
-            opacity: 0.8;
-            cursor: pointer;
-          }
-        }
-      }
-
       .img-container {
         width: 100%;
-        height: 100%;
+        height: 95%;
         background: transparent;
         position: relative;
         // padding: 1rem;
@@ -86,8 +62,36 @@ main {
           background: tran;
         }
 
+        .btn-div {
+          width: 95%;
+          max-height: 10%;
+          background: transparent;
+          display: flex;
+          justify-content: end;
+          align-items: flex-end;
+
+          button {
+            margin-right: 2rem;
+            margin-top: 2rem;
+            border: none;
+            background: transparent;
+            font-size: 2rem;
+            color: $primary-color;
+            z-index: 15;
+
+            i {
+              background: transparent;
+            }
+
+            &:hover {
+              opacity: 0.8;
+              cursor: pointer;
+            }
+          }
+        }
+
         img {
-          padding-top: 2rem;
+          padding-top: 0.5rem;
           background: transparent;
           width: 95%;
           max-height: 80%;
@@ -96,7 +100,7 @@ main {
         }
 
         p {
-          padding: 2rem;
+          margin-top: 1rem;
           color: $primary-color;
           z-index: 12;
           background: transparent;
@@ -240,17 +244,13 @@ main {
     // Special CSS for opening a full screen image
     .blog-container {
       .opened-img {
-        .btn-div {
-          position: relative;
-          display: flex;
-          justify-content: end;
-          button {
-            margin-top: 0.5rem;
-            position: relative;
-          }
-        }
-
         .img-container {
+          .btn-div {
+            button {
+              margin-top: 0.5rem;
+            }
+          }
+
           p {
             padding: 1rem;
             // font-size: 1.2rem;
@@ -271,18 +271,15 @@ main {
   main {
     // Special CSS for opening a full screen image
     .blog-container {
+      box-sizing: border-box;
       .opened-img {
-        .btn-div {
-          position: relative;
-          display: flex;
-          justify-content: end;
-          button {
-            margin-top: 0.5rem;
-            position: relative;
-          }
-        }
-
         .img-container {
+          .btn-div {
+            button {
+              margin-top: 0.5rem;
+            }
+          }
+
           img {
             max-height: 80%;
           }
@@ -293,6 +290,10 @@ main {
             overflow-y: scroll;
           }
         }
+      }
+
+      h2 {
+        font-size: 3rem;
       }
 
       .blog-sections {
