--- a/clientApp/src/app/blogs/blogs.component.scss
+++ b/clientApp/src/app/blogs/blogs.component.scss
@@ -130,26 +130,25 @@ main {
     }
 
     .blog-sections {
-      padding: 1rem;
+      padding: 0.5rem;
       display: grid;
       grid-template-columns: 1fr;
 
       .text-section {
-        margin-top: 2rem;
-        margin-bottom: 1rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
         font-size: 1.5rem;
         text-align: justify;
       }
 
       .media-section {
-        margin-bottom: 1rem;
-        margin-top: 2rem;
+        margin-bottom: 0.5rem;
+        margin-top: 0.5rem;
         .image-container {
           display: flex;
           flex-direction: column;
           width: 100%;
           align-items: center;
-
           // For images
           img {
             object-fit: cover;
@@ -157,6 +156,7 @@ main {
             height: 100%;
             max-width: 40rem;
             max-height: 40rem;
+            max-width: 30rem;
           }
 
           small {
@@ -166,49 +166,65 @@ main {
           }
         }
 
-        // for Iframe
-        .iframe-container {
-          padding-top: 30px;
-          position: relative;
-          overflow: hidden;
-          width: 100%;
-          height: 100%;
-          padding-bottom: 56.25%;
+        .video-container {
+          display: flex;
+          align-items: center;
+          justify-content: center;
 
-          iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-          }
+          .iframe-container {
+            display: grid;
+            grid-template-columns: 30rem;
+            position: relative;
+            overflow: hidden;
+            width: 25rem;
+            height: 25rem;
 
-          small {
-            text-align: center;
-            display: block;
-            font-size: 1rem;
+            iframe {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              max-width: 100%;
+              max-height: 100%;
+              object-fit: contain;
+            }
+
+            small {
+              text-align: center;
+              display: block;
+              font-size: 1rem;
+            }
           }
         }
       }
 
       .media-group-section {
         width: 100%;
-        margin-top: 2rem;
-        margin-bottom: 1rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
 
         .image-group {
-          display: grid;
-          grid-template-columns: 1fr 1fr;
+          // display: grid;
+          // grid-template-columns: 1fr 1fr 1fr;
+          // place-items: center;
+          // gap: 1px;
 
-          gap: 1px;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: center;
+          flex-wrap: wrap;
 
           .image-item {
-            max-width: 80%;
+            max-width: 20rem;
+            margin-left: 1rem;
+            margin-right: 1rem;
+            flex-basis: 20rem;
             img {
               object-fit: contain;
               width: 100%;
@@ -223,13 +239,13 @@ main {
             }
           }
 
-          .image-item:nth-child(even) {
-            justify-self: start;
-          }
+          // .image-item:nth-child(even) {
+          //   justify-self: start;
+          // }
 
-          .image-item:nth-child(odd) {
-            justify-self: end;
-          }
+          // .image-item:nth-child(odd) {
+          //   justify-self: end;
+          // }
         }
       }
     }
