--- a/clientApp/src/app/about/about.component.scss
+++ b/clientApp/src/app/about/about.component.scss
@@ -12,6 +12,7 @@
   h2 {
     font-size: 2.4rem;
     text-transform: uppercase;
+    text-align: justify;
   }
 
   p {
@@ -55,6 +56,32 @@
             width: 100%;
             height: 100%;
             object-fit: contain;
+          }
+        }
+
+        .video-container {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          .iframe-container {
+            display: grid;
+            grid-template-columns: 30rem;
+            position: relative;
+            overflow: hidden;
+            width: 45rem;
+            height: 25rem;
+
+            iframe {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              max-width: 100%;
+              max-height: 100%;
+              object-fit: contain;
+            }
           }
         }
       }
