--- a/clientApp/src/app/blogs/blogs.component.scss
+++ b/clientApp/src/app/blogs/blogs.component.scss
@@ -11,7 +11,7 @@ main {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-
+  padding-bottom: 5rem;
   // for gif loading for blogs
   .gif-container {
     display: flex;
