--- a/clientApp/src/app/gallery/gallery.component.scss
+++ b/clientApp/src/app/gallery/gallery.component.scss
@@ -311,7 +311,7 @@ $secondary-color: #fec5bb;
 
           img {
             width: 100%;
-            height: 100%;
+            min-height: 10rem;
             object-fit: contain;
           }
 
@@ -371,7 +371,7 @@ $secondary-color: #fec5bb;
 
           img {
             width: 100%;
-            height: 100%;
+            min-height: 10rem;
             object-fit: contain;
           }
 
